WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46189
WebKit
r67838
- Enabling Facebook chat would hang the browser
https://bugs.webkit.org/show_bug.cgi?id=46189
Summary
WebKit r67838 - Enabling Facebook chat would hang the browser
kevinn
Reported
2010-09-21 09:10:46 PDT
On my facebook account, using/opening the chat widjet to render at the bottom of the window - makes WebKit
r67838
use up 100% and 10 threads and will not respond indefinitely. Need to force quit to close.
Attachments
requested spin log
(39.50 KB, text/plain)
2010-09-22 07:04 PDT
,
kevinn
no flags
Details
new sample of spin log
(34.61 KB, text/plain)
2010-09-22 07:14 PDT
,
kevinn
no flags
Details
Patch to properly handle transition between non-looping and looping alternatives.
(12.60 KB, patch)
2010-09-22 15:34 PDT
,
Michael Saboff
barraclough
: review+
Details
Formatted Diff
Diff
Prior patch with comment typo fixed.
(12.60 KB, patch)
2010-09-22 16:02 PDT
,
Michael Saboff
msaboff
: review-
msaboff
: commit-queue-
Details
Formatted Diff
Diff
r68077 spin log
(37.92 KB, text/plain)
2010-09-23 10:52 PDT
,
kevinn
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2010-09-21 11:27:30 PDT
Could you please attach a spin log? You cat get one by double-clicking the Safari process in Activity Monitor.app (in Applications/Utilities folder), and then clicking Sample button.
kevinn
Comment 2
2010-09-22 07:04:28 PDT
Created
attachment 68366
[details]
requested spin log
kevinn
Comment 3
2010-09-22 07:14:15 PDT
Created
attachment 68369
[details]
new sample of spin log First log, I wasn't able to turn off all extensions that I'm using. So I've attached another sample with extensions disabled.
Alexey Proskuryakov
Comment 4
2010-09-22 08:43:00 PDT
Thank you! Hopefully, this is the same as
bug 46049
, which was recently fixed. Could you please try with a nightly newer than 67849, when it becomes available?
kevinn
Comment 5
2010-09-22 09:10:50 PDT
Will do when it's out.
Michael Saboff
Comment 6
2010-09-22 09:51:55 PDT
This is a different but than 46049. I have reduced the issue to a test case and am actively working on it.
Michael Saboff
Comment 7
2010-09-22 15:34:19 PDT
Created
attachment 68457
[details]
Patch to properly handle transition between non-looping and looping alternatives.
Gavin Barraclough
Comment 8
2010-09-22 15:45:47 PDT
Comment on
attachment 68457
[details]
Patch to properly handle transition between non-looping and looping alternatives. View in context:
https://bugs.webkit.org/attachment.cgi?id=68457&action=review
> JavaScriptCore/yarr/RegexJIT.cpp:1320 > + // If we get here, there the last input checked failed.
Typo, 'then' instead of 'there'? r+ with a fix for the typo.
Michael Saboff
Comment 9
2010-09-22 16:02:05 PDT
Created
attachment 68465
[details]
Prior patch with comment typo fixed.
Michael Saboff
Comment 10
2010-09-22 17:06:55 PDT
Committed
r68100
: <
http://trac.webkit.org/changeset/68100
>
Michael Saboff
Comment 11
2010-09-23 09:48:26 PDT
***
Bug 46257
has been marked as a duplicate of this bug. ***
kevinn
Comment 12
2010-09-23 10:52:16 PDT
Created
attachment 68549
[details]
r68077
spin log Using
r68077
. Still crashing on enabling chat widget, spin log attached.
Michael Saboff
Comment 13
2010-09-23 10:54:36 PDT
Please try on
r68100
as described in
comment #10
.
Michael Saboff
Comment 14
2010-09-23 14:00:51 PDT
***
Bug 46353
has been marked as a duplicate of this bug. ***
Michael Saboff
Comment 15
2010-09-23 15:14:25 PDT
***
Bug 46394
has been marked as a duplicate of this bug. ***
Michael Saboff
Comment 16
2010-09-23 15:17:57 PDT
***
Bug 46393
has been marked as a duplicate of this bug. ***
Michael Saboff
Comment 17
2010-09-23 16:21:13 PDT
***
Bug 46411
has been marked as a duplicate of this bug. ***
kevinn
Comment 18
2010-09-23 19:30:36 PDT
Using
r68204
, Facebook chat doesn't hang the browser anymore.
Chris Leung
Comment 19
2010-09-24 09:22:50 PDT
Flickr Javascript crash also fixed from
bug 46393
with build
r68204
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug