2010-09-22  Michael Saboff  <msaboff@apple.com>

Reviewed by Gavin Barraclough.

        Fixed the cross over from alternatives executed once and
        those that loop.  This fixed the problem where the index
        was getting messed up for looping alternatives causing an
        infinite loop.
        https://bugs.webkit.org/show_bug.cgi?id=46189

        * yarr/RegexJIT.cpp:
        (JSC::Yarr::RegexGenerator::generateDisjunction):
2010-09-22  Michael Saboff  <msaboff@apple.com>

        Reviewed by Gavin Barraclough.

        Updated tests to include patterns similar to what caused the problems
        in https://bugs.webkit.org/show_bug.cgi?id=46189.

        * fast/js/regexp-bol-expected.txt:
        * fast/js/script-tests/regexp-bol.js:


Canonical link: https://commits.webkit.org/58799@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68100 268f45cc-cd09-0410-ab3c-d52691b4dbfc